se termino de modelar nuestrapagina principal en React

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,5 +1,14 @@
+@import './Vars.scss';
+@import './Media.scss';
+
+
 body {
-    margin: 0;
-    background-color: red;
-    color: white;
+  margin: 0px;
+  background-color: $main-color;
+  font-family: $theme-font;
 }
+
+* {
+  box-sizing: border-box;
+}
+  
