--- a/src/frontend/assets/styles/components/Register.scss
+++ b/src/frontend/assets/styles/components/Register.scss
@@ -9,6 +9,7 @@
   }
   
   .registro__container {
+    width: 100px;
     background-color: rgba(255, 255, 255, 0.1);
     border: 2px solid white;
     border-radius: 40px;
