fixed some scss bugs

--- a/src/frontend/assets/styles/components/Footer.scss
+++ b/src/frontend/assets/styles/components/Footer.scss
@@ -1,5 +1,9 @@
+.blue {
+    background-color: #5630fb;
+}
+
 .footer{
-    background-color: #21C08B;
+  //  background-color: #21C08B;
     display:flex;
     align-items: center;
     height: 100px;
